<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/space_quiz"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#4CAF50"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textViewQuestionOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question1"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editviewAnswerOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:ems="10"
                android:hint="@string/your_answer_here_1"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@id/textViewQuestionOne"
                android:textColor="#4CAF50"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewQuestionTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question2"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:ems="10"
                android:hint="@string/your_answer_here_2"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@id/textViewQuestionTwo"
                android:textColor="#4CAF50"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewQuestionThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question3"
                android:textColor="#000000"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/jupiter"
                    android:textColor="#4CAF50" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/saturn"
                    android:textColor="#4CAF50" />

            </RadioGroup>

            <TextView
                android:id="@+id/textViewQuestionFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question4"
                android:textColor="#000000"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox1"
                android:textColor="#4CAF50" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox2"
                android:textColor="#4CAF50" />

            <TextView
                android:id="@+id/textViewQuestionFive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/question5"
                android:textColor="#000000"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="60dp"
                android:ems="10"
                android:hint="@string/your_answer_here_3"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@id/textViewQuestionFive"
                android:textColor="#4CAF50"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/quizResult"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="#4CAF50"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/submit" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>